<resources>
    <string name="home_tab_chat">聊天</string>
    <string name="home_tab_contact">通讯录</string>
    <string name="home_tab_workspace">工作台</string>
    <string name="home_tab_discovery">发现</string>
    <string name="home_tab_me">我的</string>

    <!--注册-->
    <string name="register_title">注册</string>

    <!--我-->
    <string name="my_chat_account">账号 : %1$s</string>
    <string name="my_gender">性别 : %1$s</string>
    <string name="my_balance">余额 : %1$s</string>
    <string name="setting">设置</string>
    <string name="my_qr_code">二维码</string>
    <string name="no_user_info">无法取得个人信息</string>

    <!--设置-->
    <string name="new_message_remind">新消息提醒</string>
    <string name="exit">退出登录</string>

    <!--关于-->
    <string name="app_name_in_about">即时通讯</string>
    <string name="function_introduction">功能介绍</string>
    <string name="complaint">投诉</string>
    <string name="check_update">检查更新</string>
    <string name="terms_of_use_and_privacy_policy">使用条款和隐私政策</string>
    <string name="name">@string/app_name</string>
    <string name="slogan">沟通如此简单</string>

</resources>
